--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.0.2",
+    "dotenv": "^16.0.0",
     "eslint-plugin-react-hooks": "^4.5.0-next-bd0813766-20220420",
     "react": "^18.0.0",
     "react-bootstrap": "^2.0.0-rc.1",
