--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +17,7 @@
     "bootstrap": "^5.0.2",
     "dotenv": "^16.0.0",
     "eslint-plugin-react-hooks": "^4.5.0-next-bd0813766-20220420",
+    "firebase": "^9.8.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^18.0.0",
